// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Team HeaderArea renders correctly 1`] = `
<div class="team-header-container">
  <div class="team-header-container__title-area">
    <h1 aria-roledescription="title" class="team-header-container__title-area__title">Project Members</h1>
    <vinfo-stub title="" buttonlabel="" onbuttonclick="[Function]" class="team-header-container__title-area__info-button"></vinfo-stub>
  </div>
  <div class="team-header-container__wrapper">
    <vheader-stub styletype="common" placeholder="Team Members" search="[Function]">
      <div class="header-default-state">
        <vbutton-stub label="+ Add" width="122px" height="48px" fontsize="16px" borderradius="6px" icon="none" onpress="[Function]" class="button"></vbutton-stub>
      </div>
      <!---->
      <!---->
    </vheader-stub>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`Team HeaderArea renders correctly with 1 selected user and delete clicked once 1`] = `
<div class="team-header-container">
  <div class="team-header-container__title-area">
    <h1 aria-roledescription="title" class="team-header-container__title-area__title">Project Members</h1>
    <vinfo-stub title="" buttonlabel="" onbuttonclick="[Function]" class="team-header-container__title-area__info-button"></vinfo-stub>
  </div>
  <div class="team-header-container__wrapper">
    <vheader-stub styletype="common" placeholder="Team Members" search="[Function]">
      <!---->
      <!---->
      <div class="header-after-delete-click"><span class="header-after-delete-click__delete-confirmation">Are you sure you want to delete <b>1</b> user?</span>
        <div class="header-after-delete-click__button-area">
          <vbutton-stub label="Delete" width="122px" height="48px" fontsize="16px" borderradius="6px" icon="none" onpress="[Function]" class="button deletion"></vbutton-stub>
          <vbutton-stub label="Cancel" width="122px" height="48px" fontsize="16px" borderradius="6px" icon="none" istransparent="true" onpress="[Function]" class="button"></vbutton-stub>
        </div>
      </div>
    </vheader-stub>
    <div class="blur-content"></div>
    <div class="blur-search"></div>
  </div>
</div>
`;

exports[`Team HeaderArea renders correctly with 2 selected users and delete clicked once 1`] = `
<div class="team-header-container">
  <div class="team-header-container__title-area">
    <h1 aria-roledescription="title" class="team-header-container__title-area__title">Project Members</h1>
    <vinfo-stub title="" buttonlabel="" onbuttonclick="[Function]" class="team-header-container__title-area__info-button"></vinfo-stub>
  </div>
  <div class="team-header-container__wrapper">
    <vheader-stub styletype="common" placeholder="Team Members" search="[Function]">
      <!---->
      <!---->
      <div class="header-after-delete-click"><span class="header-after-delete-click__delete-confirmation">Are you sure you want to delete <b>2</b> users?</span>
        <div class="header-after-delete-click__button-area">
          <vbutton-stub label="Delete" width="122px" height="48px" fontsize="16px" borderradius="6px" icon="none" onpress="[Function]" class="button deletion"></vbutton-stub>
          <vbutton-stub label="Cancel" width="122px" height="48px" fontsize="16px" borderradius="6px" icon="none" istransparent="true" onpress="[Function]" class="button"></vbutton-stub>
        </div>
      </div>
    </vheader-stub>
    <div class="blur-content"></div>
    <div class="blur-search"></div>
  </div>
</div>
`;

exports[`Team HeaderArea renders correctly with opened Add team member popup 1`] = `
<div class="team-header-container">
  <div class="team-header-container__title-area">
    <h1 aria-roledescription="title" class="team-header-container__title-area__title">Project Members</h1>
    <vinfo-stub title="" buttonlabel="" onbuttonclick="[Function]" class="team-header-container__title-area__info-button"></vinfo-stub>
  </div>
  <div class="team-header-container__wrapper">
    <vheader-stub styletype="common" placeholder="Team Members" search="[Function]">
      <div class="header-default-state">
        <vbutton-stub label="+ Add" width="122px" height="48px" fontsize="16px" borderradius="6px" icon="none" onpress="[Function]" class="button"></vbutton-stub>
      </div>
      <!---->
      <!---->
    </vheader-stub>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`Team HeaderArea renders correctly with selected users 1`] = `
<div class="team-header-container">
  <div class="team-header-container__title-area">
    <h1 aria-roledescription="title" class="team-header-container__title-area__title">Project Members</h1>
    <vinfo-stub title="" buttonlabel="" onbuttonclick="[Function]" class="team-header-container__title-area__info-button"></vinfo-stub>
  </div>
  <div class="team-header-container__wrapper">
    <vheader-stub styletype="common" placeholder="Team Members" search="[Function]">
      <!---->
      <div class="header-selected-members">
        <vbutton-stub label="Delete" width="122px" height="48px" fontsize="16px" borderradius="6px" icon="none" onpress="[Function]" class="button deletion"></vbutton-stub>
        <vbutton-stub label="Cancel" width="122px" height="48px" fontsize="16px" borderradius="6px" icon="none" istransparent="true" onpress="[Function]" class="button"></vbutton-stub> <span class="header-selected-members__info-text"><b>2</b> users selected</span>
      </div>
      <!---->
    </vheader-stub>
    <!---->
    <!---->
  </div>
</div>
`;
